@@ -81,8 +81,8 @@ text-align: right;
       <td style="vertical-align: top;"> <big><big><big>Domapp API </big>&nbsp;&nbsp;
       </big></big><br>
       </td>
-      <td style="vertical-align: top;">John Jacobsen <br>
-      <span style="font-family: monospace;">jacobsen@npxdesigns.com</span><br>
+      <td style="vertical-align: top;">John Jacobsen <span
+ style="font-family: monospace;"></span><br>
 Last revision 7/18/2005<br>
       <span style="font-family: monospace;">$Id: api.html,v 1.3
 2005/06/10 16:32:32 jacobsen Exp $</span><br>
