@@ -73,8 +73,8 @@ text-align: right;
       <td style="vertical-align: top;">&nbsp; <big><big><span
  style="font-style: italic;">DOMAPP Testing Status</span></big></big><br>
       </td>
-      <td style="vertical-align: top;">John Jacobsen <br>
-      <span style="font-family: monospace;">jacobsen@npxdesigns.com</span><br>
+      <td style="vertical-align: top;">John Jacobsen <span
+ style="font-family: monospace;"></span><br>
 Last revision 6/28/2005<br>
       <span style="font-family: monospace;">$Id:
 domapp_test_status.html,v 1.2 2005/06/23 17:18:36 jacobsen Exp $</span><br>
