@@ -74,8 +74,8 @@ margin: 0 5% 0 2%;
  style="font-style: italic;">DMT:</span> Testing
 DOMApp&nbsp;&nbsp;&nbsp;&nbsp; </big></big><br>
       </td>
-      <td style="vertical-align: top;">John Jacobsen <br>
-      <span style="font-family: monospace;">jacobsen@npxdesigns.com</span><br>
+      <td style="vertical-align: top;">John Jacobsen <span
+ style="font-family: monospace;"></span><br>
 Last revision 8/11/2005<br>
       <span style="font-family: monospace;">$Id: domapp_testing.html,v
 1.2 2005/06/10 15:59:06 jacobsen Exp $</span><br>
@@ -171,7 +171,7 @@ desired).&nbsp; E.g., <br>
 <br>
 <div style="" class="terminal">$ <span style="font-weight: bold;">on
 all</span><br>
-Driver V02-06-01h (dh.c $Revision: 1.10 $)<br>
+Driver V02-06-01h (dh.c $Revision: 1.11 $)<br>
 /proc/driver/domhub/card0 -- PCI=0, FW=010w, DOR=0<br>
 /proc/driver/domhub/card1 -- PCI=0, FW=010w, DOR=0<br>
 /proc/driver/domhub/card2 -- PCI=0, FW=010w, DOR=0<br>
