@@ -73,9 +73,9 @@ text-align: right;
       <td style="vertical-align: top;">&nbsp; <big><big><span
  style="font-style: italic;">DOMAPP Software Status Page&nbsp;&nbsp; </span></big></big><br>
       </td>
-      <td style="vertical-align: top;">John Jacobsen <br>
-      <span style="font-family: monospace;">jacobsen@npxdesigns.com</span><br>
-Last revision 8/11/2005<br>
+      <td style="vertical-align: top;">John Jacobsen <span
+ style="font-family: monospace;"><br>
+      </span>Last revision 8/16/2005<br>
       <span style="font-family: monospace;">$Id: index.html,v 1.5
 2005/06/10 15:59:06 jacobsen Exp $</span><br>
       </td>
@@ -85,76 +85,20 @@ Last revision 8/11/2005<br>
 Code Status | <a href="api.html">API</a> | <a
  href="domapp_testing.html">Test SW</a> | <a
  href="domapp_test_status.html">Testing Status</a><br>
-<h2>PROGRESS SUMMARY</h2>
-Key features are implemented, and many if not most have been tested in
-an automated fashion.<br>
+<h2>PROJECT SUMMARY</h2>
+Key features are implemented, and most have been tested in
+an automated fashion; detailed feature matrix below.<br>
 <br>
-<div style="text-align: left;"><big style="color: rgb(153, 0, 0);"><big><span
- style="font-style: italic; font-weight: bold;">The latest release
-is V00-00-09.</span></big></big><br
- style="font-style: italic; font-weight: bold;">
-</div>
+See the domapp section on the <a
+ href="http://glacier.lbl.gov/icecube_release.html#domapp">Glacier
+release page</a> for the most recent release.hex file
+(release-domapp-Vxx-yy-zz.hex) and <a
+ href="http://glacier.lbl.gov/releases/DOM-MB/domapp/RELEASE_NOTES">release
+notes</a>.<br>
 <br>
-<span style="font-weight: bold;"></span>
-<table style="text-align: left;" border="1" cellpadding="2"
- cellspacing="2">
-  <tbody>
-    <tr>
-      <td
- style="vertical-align: top; color: rgb(51, 102, 102); text-align: right;"><big><span
- style="font-weight: bold;">CVS Project Name:</span></big></td>
-      <td style="vertical-align: top;">"domapp" <span
- style="color: rgb(153, 153, 153);">(the Test FPGA version is called
-testdomapp)</span></td>
-    </tr>
-    <tr>
-      <td
- style="vertical-align: top; color: rgb(51, 102, 102); text-align: right;"><big><span
- style="font-weight: bold;">Most recent release tag:</span></big></td>
-      <td style="vertical-align: top;"><span style="font-weight: bold;"></span>V00-00-09
-(beta)&nbsp; <a
- href="http://glacier.lbl.gov/releases/DOM-MB/domapp/RELEASE_NOTES">Release
-Notes</a><span style="color: rgb(204, 0, 0);"></span></td>
-    </tr>
-    <tr>
-      <td
- style="vertical-align: top; color: rgb(51, 102, 102); text-align: right;"><big><span
- style="font-weight: bold;">Corresponding domapp fpga build:<br>
-      </span></big></td>
-      <td style="vertical-align: top;">domapp.sbi Build # 264<br>
-      </td>
-    </tr>
-    <tr>
-      <td
- style="vertical-align: top; color: rgb(51, 102, 102); text-align: right;"><big><span
- style="font-weight: bold;">Corresponding DOM-MB release number:</span><br>
-      </big></td>
-      <td style="vertical-align: top;">Not yet packaged into "official
-DOM-MB release."&nbsp; release.hex built with DOM-MB projects tagged
-as&nbsp; <span style="color: rgb(0, 0, 0);">domapp-V00-00-09 tag</span><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top; text-align: right;"><big><span
- style="color: rgb(51, 102, 102); font-weight: bold;">Test with:</span></big><br>
-      </td>
-      <td style="vertical-align: top;"><a href="domapp_testing.html">domapp-tools/dmt</a>,
-V00-00-07<span style="color: rgb(255, 0, 0);"></span><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top; text-align: right;"><big><span
- style="color: rgb(51, 102, 102); font-weight: bold;">Beta release.hex:</span></big><br>
-      </td>
-      <td style="vertical-align: top;"><a style="color: rgb(102, 0, 0);"
- href="http://glacier.lbl.gov/releases/DOM-MB/domapp/release-domapp-V00-00-09.hex">http://glacier.lbl.gov/releases/DOM-MB/domapp/release-domapp-V00-00-09.hex</a><br>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<span style="font-weight: bold;"></span><span
- style="color: rgb(153, 153, 153);"></span><big><span
- style="font-weight: bold;"></span></big><br>
+Test software is available <a href="domapp_test_status.html">here</a>.<br>
+<br>
+Messaging API and data formats are also <a href="api.html">documented</a>.<br>
 <h2 style="font-weight: normal;"><big>MAJOR NEW FEATURES relative to
 "testdomapp"<br>
 </big></h2>
@@ -189,10 +133,11 @@ has been cleaned up;<br>
   <li>Nearly nonexistent testdomapp documentation has been filled out
 into a full API document for domapp.</li>
   <br>
-  <br>
 </ol>
 <h2 style="font-weight: normal;"><big>DOCUMENTATION</big></h2>
-See the <a href="RELEASE_NOTES">release notes</a> for recently
+See the <a
+ href="http://glacier.lbl.gov/releases/DOM-MB/domapp/RELEASE_NOTES">release
+notes</a> for recently
 addressed and outstanding issues.<br>
 <br>
 <a href="api.html">DOMApp messaging API</a>
